crates/cherenkov-protocol/src/snapshots/cherenkov_protocol__frame__tests__connect_ok.snap
---
source: crates/cherenkov-protocol/src/frame.rs
assertion_line: 646
expression: bytes.as_ref()
---
[
    42,
    15,
    8,
    13,
    18,
    5,
    97,
    108,
    105,
    99,
    101,
    24,
    128,
    226,
    207,
    170,
    6,
]
