crates/cherenkov-protocol/src/snapshots/cherenkov_protocol__frame__tests__error.snap
---
source: crates/cherenkov-protocol/src/frame.rs
expression: bytes.as_ref()
---
[
    34,
    36,
    8,
    9,
    16,
    2,
    26,
    30,
    99,
    104,
    97,
    110,
    110,
    101,
    108,
    32,
    110,
    97,
    109,
    101,
    32,
    109,
    117,
    115,
    116,
    32,
    110,
    111,
    116,
    32,
    98,
    101,
    32,
    101,
    109,
    112,
    116,
    121,
]
