crates/cherenkov-protocol/src/snapshots/cherenkov_protocol__frame__tests__publication.snap
---
source: crates/cherenkov-protocol/src/frame.rs
expression: bytes.as_ref()
---
[
    26,
    19,
    10,
    11,
    114,
    111,
    111,
    109,
    115,
    46,
    108,
    111,
    98,
    98,
    121,
    16,
    42,
    26,
    2,
    104,
    105,
]
