crates/cherenkov-protocol/src/snapshots/cherenkov_protocol__frame__tests__publish.snap
---
source: crates/cherenkov-protocol/src/frame.rs
expression: bytes.as_ref()
---
[
    26,
    22,
    8,
    11,
    18,
    11,
    114,
    111,
    111,
    109,
    115,
    46,
    108,
    111,
    98,
    98,
    121,
    26,
    5,
    104,
    101,
    108,
    108,
    111,
]
