crates/cherenkov-protocol/src/snapshots/cherenkov_protocol__frame__tests__subscribe.snap
---
source: crates/cherenkov-protocol/src/frame.rs
expression: bytes.as_ref()
---
[
    10,
    15,
    8,
    7,
    18,
    11,
    114,
    111,
    111,
    109,
    115,
    46,
    108,
    111,
    98,
    98,
    121,
]
